# Openbook

./: .gitignore  .openbookignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  repo_memory_benchmark.py  resource_benchmark.py
benchmarks/longmemeval/: README.md  openbook_longmemeval.py  sample_longmemeval.json
benchmarks/published/longmemeval-s-fts-full-500/: metrics.csv  records.jsonl  results.json  summary.md
benchmarks/published/longmemeval-s-gemini-hybrid-qa-full-500/: metrics.csv  records.jsonl  results.json  summary.md
benchmarks/published/repo-memory-local-11-task/: metrics.csv  records.jsonl  results.json  summary.md
docs/: _config.yml  architecture.md  benchmarking-policy.md  benchmarks.md  comparison.md  competitive-benchmark-landscape.md  competitive-gap-analysis.md  config.md  ecosystem-coverage.md  index.md  installation.md  mcp.md  private-launch-plan.md  project-structure.md  providers.md  public-alpha-checklist.md  release-plan.md  releasing.md  resource-benchmarks.md  security.md  shared-runtime.md  slash-commands.md  troubleshooting.md  turboquant-compression-notes.md
src/openbook/: __init__.py
src/openbook/benchmarks/: __init__.py  repo_memory.py  resource.py
src/openbook/cli/: __init__.py  main.py
src/openbook/core/: __init__.py  db.py  (+9 more)
tests/: test_longmemeval_benchmark.py  test_openbook.py  test_repo_memory_benchmark.py  test_resource_benchmark.py
(+8 files in other folders)
